Fix running of error-prone itself (#6200)